# fraud-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml  test.txt
.github/workflows/: deploy_api.yml
api/: deps.py  main.py  schemas.py
internalpy/: config.py  errx.py  log.py
model/: demo_samples.json  train.py
model/artifacts/: metadata.json  model.joblib
static/demo/: index.html
tests/: test_api_smoke.py  test_model_artifacts.py  test_predict_smoke.py
