[project]
name = "fraud-detector"
version = "0.1.0"
description = "End-to-end fraud detection API on GCP (Cloud Run + BigQuery)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Data / ML
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",

    # GCP
    "google-cloud-bigquery>=3.26",
    "google-cloud-secret-manager>=2.20",
    "google-auth>=2.35",

    # Config / utils
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "msgspec>=0.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "httpx>=0.27",
    "anyio>=4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["model/artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
ignore_missing_imports = true
files = ["internalpy", "api", "model"]

[tool.pyright]
exclude = ["**/.venv", "**/.mypy_cache", "**/__pycache__"]
typeCheckingMode = "basic"
include = ["internalpy", "api", "model"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
